--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -1,10 +1,15 @@
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", Arial, serif;
-  font-weight: 500;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Open Sans", Arial, serif;
+  font-weight: 600;
 }
 
 html {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
